--- a/hw1/index.html
+++ b/hw1/index.html
@@ -26,6 +26,11 @@
 <h1 align="middle">CS 184/284A: Computer Graphics and Imaging, Spring 2024</h1>
 <h1 align="middle">Homework 1: Rasterizer</h1>
 <h2 align="middle">Kingsley Situ, Mengjun Wen</h2>
+<h3 align="middle">
+  <a href="https://cal-cs184-student.github.io/hw-webpages-sp24-rv/hw1/index.html">
+    https://cal-cs184-student.github.io/hw-webpages-sp24-rv/hw1/index.html
+  </a>
+</h3>
 
 <br><br>
 
