--- a/hw2/index.html
+++ b/hw2/index.html
@@ -1,7 +1,450 @@
-<html>
-	<head>
-	</head>
-	<body>
-		Homework 2 index.html here
-	</body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+<style>
+  body {
+    background-color: white;
+    padding: 100px;
+    width: 1000px;
+    margin: auto;
+    text-align: left;
+    font-weight: 300;
+    font-family: 'Open Sans', sans-serif;
+    color: #121212;
+  }
+  h1, h2, h3, h4 {
+    font-family: 'Source Sans Pro', sans-serif;
+  }
+  kbd {
+    color: #121212;
+  }
+</style>
+<title>CS 184 Mesh Edit</title>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro" rel="stylesheet">
+
+<script>
+  MathJax = {
+    tex: {
+      inlineMath: [['$', '$'], ['\\(', '\\)']]
+    }
+  };
+</script>
+<script id="MathJax-script" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
+</script>
+
+</head>
+
+
+<body>
+
+<h1 align="middle">CS 184: Computer Graphics and Imaging, Spring 2018</h1>
+<h1 align="middle">Project 2: Mesh Edit</h1>
+<h2 align="middle">Kingsley Situ, Mengjun Wen</h2>
+
+
+
+<h2 align="middle">Overview</h2>
+<p>
+In this project, we managed to implement Bézier curves and surfaces.
+  We also implemented smoothing of meshes and the upsampling of meshes using Loop subdivision.
+</p>
+<br>
+
+
+<h2 align="middle">Section I: Bezier Curves and Surfaces</h2>
+
+<h3 align="middle">Part 1: Bezier Curves with 1D de Casteljau Subdivision</h3>
+
+
+<b>
+  Briefly explain de Casteljau's algorithm and how you implemented it in order to evaluate Bezier curves.
+</b>
+<p>
+  De Casteljau's algorithm is a method used to evaluate Bezier curves.
+  The main idea of de Casteljaul's algorithm is recursive linear interpolation between points.
+  Given a set of n control points define a Bezier curve, and a parameter t in the range [0,1], the algorithm computes a point on the curve corresponding to t.
+  First, for each pair of adjacent control points, interpolate a new point based on parameter t, Q<sub>i</sub> = (1-t)P<sub>i</sub> + tP<sub>i+1</sub>.
+  Then, repeat the process of linear interpolation on the new set of points generated from previous step.
+  Each iteration reduces the number of points by one until only a single point remains.
+  When there is only one point left, the process terminates. This final points is the point on the Bezier curve corresponding to parameter t.
+  In this implementation, we define a function <code>BezierCurve::evaluateStep</code> which takes as input a <code>std::vector</code> of 2D points, and outputs a list of intermediate control points at the parameter t generated from the single step of recursion described above.
+  We simply defined a new <code>std::vector</code> which is the next set of points for recursive, and calculate the linear interpolation for each pair of adjacent points, then push the new point to the list.
+  We finally returned the list of linearly-interpolated points.
+  To evaluate Bezier curve, we call evaluateStep until we find a single point on the curve for a given parameter value t.
+</p>
+<br>
+
+
+<b>
+  Take a look at the provided .bzc files and create your own Bezier curve with 6 control points of your choosing. Use this Bezier curve for your screenshots below.
+</b>
+<p>
+  <div align="middle">
+  <img src="images/s1p1-step5.png" align="middle" width="50%">
+  <figcaption>Bezier curve with 6 control points.</figcaption>
+</div>
+</p>
+<br>
+
+<b>
+  Show screenshots of each step / level of the evaluation from the original control points down to the final evaluated point. Press <kbd>E</kbd> to step through. Toggle <kbd>C</kbd> to show the completed Bezier curve as well.
+</b>
+<!-- Example of including multiple figures -->
+<div align="middle">
+  <table style="width:100%">
+    <tr align="center">
+      <td>
+        <img src="images/s1p1-step0.png" align="middle" width="400px"/>
+        <figcaption>Level 0</figcaption>
+      </td>
+      <td>
+        <img src="images/s1p1-step1.png" align="middle" width="400px"/>
+        <figcaption>Level 1</figcaption>
+      </td>
+    </tr>
+    <br>
+    <tr align="center">
+      <td>
+        <img src="images/s1p1-step2.png" align="middle" width="400px"/>
+        <figcaption>Level 2</figcaption>
+      </td>
+      <td>
+        <img src="images/s1p1-step3.png" align="middle" width="400px"/>
+        <figcaption>Level 3</figcaption>
+      </td>
+    </tr>
+    <br>
+    <tr align="center">
+      <td>
+        <img src="images/s1p1-step4.png" align="middle" width="400px"/>
+        <figcaption>Level 4</figcaption>
+      </td>
+      <td>
+        <img src="images/s1p1-step5.png" align="middle" width="400px"/>
+        <figcaption>Level 5</figcaption>
+      </td>
+    </tr>
+    <br>
+  </table>
+</div>
+<br>
+
+
+<b>
+  Show a screenshot of a slightly different Bezier curve by moving the original control points around and modifying the parameter \(t\) via mouse scrolling.
+</b>
+<p>
+  <div align="middle">
+    <img src="images/s1p1-t.png" align="middle" width="50%">
+    <figcaption>Same control points with a new t value.</figcaption>
+  </div>
+  <div align="middle">
+    <img src="images/s1p1-point.png" align="middle" width="50%">
+    <figcaption>Same t value but change a control point.</figcaption>
+  </div>
+  <div align="middle">
+    <img src="images/s1p1-new.png" align="middle" width="50%">
+    <figcaption>A different Bezier curve.</figcaption>
+  </div>
+</p>  
+<br>
+
+
+<h3 align="middle">Part 2: Bezier Surfaces with Separable 1D de Casteljau</h3>
+<b>
+  Briefly explain how de Casteljau algorithm extends to Bezier surfaces and how you implemented it in order to evaluate Bezier surfaces.
+</b>
+<p>
+  De Casteljau's algorithm extends naturally to Bezier surfaces by applying the algorithm iteratively in two directions, usually denoted as parameters u and v.
+  Bezier surfaces are defined by using of multiple 1D Bezier curves.
+  Essentially, a Bezier surface is constructed by interpolating between several Bezier curves in two directions.
+  The process invovles two main steps.
+  First, the algorithm is applied in parameter direction(e.g. u) for each row of control points. In this step, the algorithm treats each row of as a separate Bezier curve and computes intermediate points for parameter u.
+  Second, the algorithm takes the intermediate points obtained from the first step and treats them as control points for a new Bezier curve in the other parameter direction(e.g. v).
+  After this, we will have a single point on the Bezier surface corresponding to the parameters u and v.
+  For implementation, the <code>BezierPatch::evaluateStep</code> function is similar to funtion we implemented in part 1. It performing one step of de Casteljau's algorithm.
+  The <code>BezierPatch::evaluate1D</code> is implemented by recursively calling evaluateStep until only one point remains.
+  The <code>BezierPatch::evaluate</code> is designed to evaluate the Bezier surface at a given point (u,v).
+  It first iterates through the grid of control points in the u direction, evaluating Bezier curve for each row using evaluate1D function with parameter u.
+  After this, we have a intermediate set of points along the u direction.
+  Then we treat these intermediate points as control points for a Bezier curve in v direction.
+  We call evaluate1D function again, and return the final point on the Bezier surface for given (u,v).
+</p>
+<br>
+
+
+<b>
+  Show a screenshot of bez/teapot.bez (not .dae) evaluated by your implementation.
+</b>
+<p>
+  <div align="middle">
+    <img src="images/s1p2-teapot.png" align="middle" width="50%">
+    <figcaption>A teapot evaluated by Bezier curve.</figcaption>
+  </div>
+</p>
+<br>
+
+
+<h2 align="middle">Section II: Triangle Meshes and Half-Edge Data Structure</h2>
+
+<h3 align="middle">Part 3: Area-Weighted Vertex Normals</h3>
+
+<b>
+  Briefly explain how you implemented the area-weighted vertex normals.
+</b>
+<p>
+  The process involves calculating the normals for each triangle adjacent to a vertex and then taking a weighted average of these normals, where the weight is proportional to the area of each triangle.
+  To implement the area-weighted vertex normals, we first need to iterate over adjacent triangles, which need to make use of hald-edge data structure.
+  To effectively traverse the mesh and access faces surrounding a specific vertex, the process begins by obtaining the initial half-edge directly associated with the vertex, utilizing the halfedge() function.
+  Each half-edge object contains a pointer pointing to the face it belongs to, so we are now traversing a face associated to this vertex.
+  To navigate through all adjacent faces of the vertex, the traversal exploits the half-edge structure: moving from the current half-edge to its twin (via the twin() method) and then to the next outgoing half-edge (via the next() method).
+  In this way, we are able to traverse all outgoing halfedge and, consequently, each face connected to the vertex.
+  We also check that the face is not boundary since we do not want compute normal for such a face.
+  Also, we need to calculate normal vertex for each adjacent triangle.
+  To calculate the normal vector for a face, we need to obtain the three vertices of the face(v0, v1 and v2)
+  and calculate vector (v1 - v0) and (v2 - v0). 
+  Then we use the cross product of these two vectors to find its normal vector.
+  It's important to note that the normal vector obtained directly from the cross 
+  product is already proportional to the area, so we don't need to multiply by the area again. 
+  Finally, by adding these area-proportional normal vectors of each face to our final vector and then normalizing it, we can obtain the area-weighted vertex Normal we need.
+</p>
+<br>
+
+
+<b>
+  Show screenshots of dae/teapot.dae (not .bez) comparing teapot shading with and without vertex normals. Use <kbd>Q</kbd> to toggle default flat shading and Phong shading.
+</b>
+<p>
+  <div align="middle">
+    <table style="width:100%">
+      <tr align="center">
+        <td>
+          <img src="images/p3-flat.png" align="middle" width="400px"/>
+          <figcaption>Flat shading using face normals.</figcaption>
+        </td>
+        <td>
+          <img src="images/p3-phong.png" align="middle" width="400px"/>
+          <figcaption>Phong shading using vertex normals</figcaption>
+        </td>
+      </tr>
+      <br>
+    </table>
+  </div>
+</p>
+<br>
+
+
+<h3 align="middle">Part 4: Edge Flip</h3>
+<b>
+  Briefly explain how you implemented the edge flip operation and describe any interesting implementation / debugging tricks you have used.
+</b>
+<p>
+  The edge flip operation was implemented by identifying and reassigning connections between the halfedges, vertices,
+  edges, and faces involved in two adjacent triangles sharing the edge to be flipped. This involves updating the next,
+  twin, and vertex pointers of halfedges, ensuring vertices point to a valid outgoing halfedge,
+  and edges and faces are updated to reflect their new halfedges. An interesting trick used in debugging was
+  visualizing the mesh before and after the flip operation to ensure topology remained consistent,
+  and using assertions to verify the connectivity invariants of the mesh were maintained throughout the operation.
+</p>
+<br>
+
+
+<b>
+  Show screenshots of the teapot before and after some edge flips.
+</b>
+<p>
+  <div align="middle">
+    <table style="width:100%">
+      <tr align="center">
+        <td>
+          <img src="images/p4-unflip.png" align="middle" width="400px"/>
+          <figcaption>Before flipping</figcaption>
+        </td>
+        <td>
+          <img src="images/p4-flipped.png" align="middle" width="400px"/>
+          <figcaption>After flipping</figcaption>
+        </td>
+      </tr>
+      <br>
+    </table>
+  </div>
+</p>
+<br>
+
+
+<b>
+    Write about your eventful debugging journey, if you have experienced one.
+</b>
+<p>
+  At the beginning, there are some holes in my mesh, I managed to fix it by updating the faces after flipping.
+</p>
+<br>
+
+
+<h3 align="middle">Part 5: Edge Split</h3>
+<b>
+  Briefly explain how you implemented the edge split operation and describe any interesting implementation / debugging tricks you have used.
+</b>
+<p>
+  The edge split operation was implemented by creating new vertices, edges, and faces while updating the connectivity
+  between existing mesh elements. A key trick was to maintain a consistent mesh topology by carefully reassigning
+  halfedge pointers. Debugging involved visually inspecting the mesh before and after operations to ensure topological
+  consistency and using debug assertions to check the integrity of the mesh's structure at various stages of
+  the operation. This approach helped quickly identify and fix issues related to incorrect halfedge connectivity.
+</p>
+<br>
+
+
+<b>
+    Show screenshots of a mesh before and after some edge splits. 
+</b>
+<p>
+  <div align="middle">
+    <table style="width:100%">
+      <tr align="center">
+        <td>
+          <img src="images/p5-original.png" align="middle" width="400px"/>
+          <figcaption>Before splitting</figcaption>
+        </td>
+        <td>
+          <img src="images/p5-split.png" align="middle" width="400px"/>
+          <figcaption>After splitting</figcaption>
+        </td>
+      </tr>
+      <br>
+    </table>
+  </div>
+</p>
+<br>
+
+
+<b>
+    Show screenshots of a mesh before and after a combination of both edge splits and edge flips.
+</b>
+<p>
+  <div align="middle">
+    <table style="width:100%">
+      <tr align="center">
+        <td>
+          <img src="images/p5-original.png" align="middle" width="400px"/>
+          <figcaption>Before flipping and splitting</figcaption>
+        </td>
+        <td>
+          <img src="images/p5-flip&split.png" align="middle" width="400px"/>
+          <figcaption>After flipping and splitting</figcaption>
+        </td>
+      </tr>
+      <br>
+    </table>
+  </div>
+</p>
+<br>
+
+
+<h3 align="middle">Part 6: Loop Subdivision for Mesh Upsampling</h3>
+<b>
+  Briefly explain how you implemented the loop subdivision and describe any interesting implementation / debugging tricks you have used.
+</b>
+<p>
+  In implementing Loop subdivision, vertex positions were recalculated by leveraging neighbor vertices' weighted
+  positions, ensuring a smoother mesh. New vertices were created at edge midpoints using a specific formula,
+  effectively refining the mesh's detail. Original edges were split, incorporating these newly calculated positions.
+  A notable step was flipping edges that connected new and old vertices to improve mesh flow. Debugging involved
+  visual inspection and utilizing temporary color coding to differentiate between old and new vertices and edges,
+  greatly simplifying the process of verifying correct implementation and mesh integrity.
+</p>
+<br>
+
+
+<b>
+  Take some notes, as well as some screenshots, of your observations on how meshes behave after loop subdivision. What happens to sharp corners and edges? Can you reduce this effect by pre-splitting some edges?
+</b>
+<p>
+  <div align="middle">
+    <table style="width:100%">
+      <tr align="center">
+        <td>
+          <img src="images/p6-original.png" align="middle" width="400px"/>
+          <figcaption>Original</figcaption>
+        </td>
+        <td>
+          <img src="images/p6-up1x.png" align="middle" width="400px"/>
+          <figcaption>upsample 1X</figcaption>
+        </td>
+      </tr>
+      <br>
+    </table>
+  </div>
+  <div align="middle">
+    <table style="width:100%">
+      <tr align="center">
+        <td>
+          <img src="images/p6-up2x.png" align="middle" width="400px"/>
+          <figcaption>upsample 2X</figcaption>
+        </td>
+        <td>
+          <img src="images/p6-up3x.png" align="middle" width="400px"/>
+          <figcaption>upsample 3X</figcaption>
+        </td>
+      </tr>
+      <br>
+    </table>
+  </div>
+  Loop subdivision smoothens meshes by recalculating vertex positions based on the weighted average of neighboring
+  vertices. Sharp edges and corners become rounded due to the averaging effect, with vertices farther apart
+  experiencing more drastic changes. This effect can lead to a loss of the mesh's original geometric details.
+  Pre-splitting edges before subdivision can mitigate excessive smoothing by ensuring vertices are more uniformly
+  distributed, leading to a finer mesh with preserved details. The process also enhances symmetry in the mesh,
+  as it corrects asymmetries caused by uneven distribution of vertex neighbors. Pre-splitting makes the mesh
+  more uniform in density, thereby reducing the uneven impact of subdivision on differently dense areas,
+  resulting in a more symmetrical and less drastically altered shape post-subdivision.
+</p>
+<br>
+
+
+<b>
+  Load dae/cube.dae. Perform several iterations of loop subdivision on the cube. Notice that the cube becomes slightly asymmetric after repeated subdivisions. Can you pre-process the cube with edge flips and splits so that the cube subdivides symmetrically? Document these effects and explain why they occur. Also explain how your pre-processing helps alleviate the effects.
+</b>
+<p>
+  <div align="middle">
+    <table style="width:100%">
+      <tr align="center">
+        <td>
+          <img src="images/p6-cube-before-original.png" align="middle" width="400px"/>
+          <figcaption>Before pre-splitting, original</figcaption>
+        </td>
+        <td>
+          <img src="images/p6-cube-before-3x.png" align="middle" width="400px"/>
+          <figcaption>Before pre-splitting, upsample 3X</figcaption>
+        </td>
+      </tr>
+      <br>
+    </table>
+  </div>
+  <div align="middle">
+    <table style="width:100%">
+      <tr align="center">
+        <td>
+          <img src="images/p6-presplit-original.png" align="middle" width="400px"/>
+          <figcaption>After pre-splitting, original</figcaption>
+        </td>
+        <td>
+          <img src="images/p6-presplit-3x.png" align="middle" width="400px"/>
+          <figcaption>After pre-splitting, upsample 3X</figcaption>
+        </td>
+      </tr>
+      <br>
+    </table>
+  </div>
+The mesh before pre-processing was not completely symmetrical as vertices have different amount of neighbors
+  and the number of neighbors of a vertex directly affects the change in position. Without proper splitting and
+  flipping, the cube becomes asymmetrical.
+  After pre-processing using splitting and flipping, the cube subdivides symmetrically.
+</p>
+<br>
+
+
+</body>
 </html>
