--- a/hw2/index.html
+++ b/hw2/index.html
@@ -42,6 +42,11 @@
 <h1 align="middle">CS 184: Computer Graphics and Imaging, Spring 2018</h1>
 <h1 align="middle">Project 2: Mesh Edit</h1>
 <h2 align="middle">Kingsley Situ, Mengjun Wen</h2>
+<h3 align="middle">
+  <a href="https://cal-cs184-student.github.io/hw-webpages-sp24-rv/hw2/index.html">
+    https://cal-cs184-student.github.io/hw-webpages-sp24-rv/hw2/index.html
+  </a>
+</h3>
 
 
 
