--- a/hw4/index.html
+++ b/hw4/index.html
@@ -28,6 +28,8 @@
 <h1 align="middle">Project 4: Cloth Simulator</h1>
 <h2 align="middle">Mengjun Wen, Kingsley Situ</h2>
 
+<h2 align="middle">Website URL: <a href="https://cal-cs184-student.github.io/hw-webpages-sp24-rv/hw4/index.html">https://cal-cs184-student.github.io/hw-webpages-sp24-rv/hw4/index.html</a></h2>
+
 <h2 align="middle">Overview</h2>
 <p>This project developed a real-time cloth simulation using a mass-spring model. Structural, shearing, and bending springs provided realistic deformation. The simulation incorporated gravity, self-collision detection, collision handling with external objects, and custom cloth shaders for rendering.</p>
 <h2 align="middle">Part I: Masses and springs</h2>
